# ada-fp8-gemm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WORKLOG.md  main.py  pyproject.toml
csrc/: python_api.cpp
fp8_gemm/include/common/: types.cuh
fp8_gemm/include/impls/: sm89.cuh
